# yuzu-font-detect

./: .gitignore  Changelog.md  Dockerfile  HuggingfaceSpaceBase.Dockerfile  README_UPGRADE.md  YuzuMarker.FontDetection_Report.md  complete_font_detection.py  font_detection_tool.py  font_ds_generate_script.py  font_list.txt  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_generate_font_dataset.txt  setup_venv.sh  train.py
configs/: font.yml
detector/: config.py  data.py
font_dataset/: font.py  layout.py  text.py
font_detection_src/: __init__.py  complete_font_detection.py  fonts.py
