[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "YuzuMarker.FontDetection"
version = "0.1.0"
description = "Font detection for YuzuMarker"
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "lightning>=2.2.0",
    "gradio>=4.19.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
    "huggingface_hub>=0.20.0",
    "fonttools>=4.46.0",
    "pygit2>=1.13.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "markupsafe>=2.1.3",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.0",
    "idna>=3.6",
    "importlib-resources>=6.1.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "zipp>=3.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 